[gd_scene load_steps=4 format=3 uid="uid://d0c8jx2wy4nvp"]

[ext_resource type="Script" path="res://scripts/terrain/terrain_system.gd" id="1_abcd1"]
[ext_resource type="Script" path="res://scripts/world/chunk_manager.gd" id="2_efgh2"]
[ext_resource type="Script" path="res://scripts/terrain/world_generator.gd" id="3_ijkl3"]

[node name="TerrainSystem" type="Node3D"]
script = ExtResource("1_abcd1")

[node name="ChunkManager" type="Node3D" parent="."]
script = ExtResource("2_efgh2")

[node name="WorldGenerator" type="Node" parent="."]
script = ExtResource("3_ijkl3")
